Fixes visibility issue

--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -1875,10 +1875,6 @@ font: normal normal normal 16px/1 'Material Icons';
   content:"fullscreen"
 }
 
-div#ff-footer {
-    visibility: hidden;
-}
-
 .fa-compress:before {
   font: normal normal normal 16px/1 'Material Icons';
   display: inline-block;
